--- a/index.html
+++ b/index.html
@@ -291,6 +291,12 @@
       </a>
       <p>Machine Learning with Python – Coursera</p>
     </div>
+     <div style="text-align: center;">
+      <a href="https://example.com/certificate3" target="_blank">
+        <img src="Certificate4.png" alt="Machine Learning with Python – Coursera" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+      </a>
+      <p>Machine Learning with Python – Coursera</p>
+    </div>
   </div>
 </section>
 
